fixed background image alignment on mobile devices

--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -1047,3 +1047,11 @@ a:hover {
     padding-right: 40px;
   }
 }
+
+// Iphone 8 Plus >
+  @media only screen and (max-width: 700px)
+    { 
+        .background-fixed {
+          background-position: left;
+        }
+    }
